# sagittal_average

./: pyproject.toml  test_output.csv  test_sagittal_brain.py
src/sagittal_average/: __init__.py  cli.py
tests/: test_run_averages.py
